--- a/src/root.css
+++ b/src/root.css
@@ -7,6 +7,10 @@ button {
     outline: none;
 }
 
+.btn.disabled, .btn:disabled {
+    opacity: 0.65;
+}
+
 .rounded {
     border-radius: 0.25rem !important;
 }
