--- a/example/src/index.css
+++ b/example/src/index.css
@@ -1,6 +1,6 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-  background-color: #FAFAFA;
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+    background-color: #fafafa;
 }
