Remove bulma-helper from peer dependency

--- a/example/src/index.css
+++ b/example/src/index.css
@@ -2,7 +2,7 @@
 @import url('material-design-icons/iconfont/material-icons.css');
 
 html {
-  background-color: #ffffcc;
+  background-color: #fafafa;
 }
 
 body {
